# Typenaut

./: pyproject.toml  readme.md
.github/: readme.md
.github/workflows/: make-wheels.yml
examples/: card.py  minimal.py  packages.py  shadow.py
typenaut/: __init__.py  document.py  module.py  utils.py
typenaut/base/: color.py  custom.py  length.py  stroke.py  text.py
typenaut/core/: __init__.py  angle.py  color.py  function.py  length.py  stroke.py
typenaut/extra/: __init__.py  card.py
typenaut/modules/: __init__.py  custom.py  image.py  include.py  rectangle.py  sections.py  text.py
