[project]
name        = "typenaut"
description = "Typst metaprogramming in python"
authors     = [{name="Tremeschin"}]
version     = "0.1.0"
readme      = ".github/readme.md"
license     = "LicenseRef-Proprietary" # Still deciding
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10"
dependencies = [
    "attrs~=25.3.0",
    "pillow",
    "pypdfium2~=4.30.0",
    "typst~=0.13.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["typenaut"]
