[project]
name        = "typenaut"
description = "Typst metaprogramming in python"
authors     = [{name="Tremeschin"}]
version     = "0.1.0"
readme      = "readme.md"
license     = "LicenseRef-Proprietary" # Still deciding
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.10"
dependencies = [
    "attrs",
    "pillow",
    "pypdfium2",
    "typst",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["typenaut"]
